--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,22 +14,26 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".NewsActivity"
-            android:label="@string/app_name">
+            android:name=".NewsActivityOnCreate"
+            android:label="@string/app_name"
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivitiesActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".ActivitiesActivityOnCreate"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop">
         </activity>
-        <activity android:name=".GoAbroadActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".GoAbroadActivityOnCreate"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop">
         </activity>
-        <activity android:name=".MoreActivity"
-            android:screenOrientation="portrait">
+        <activity android:name=".MoreActivityOnCreate"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop">
         </activity>
     </application>
 
