--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ dependencies {
     implementation 'com.android.support:support-vector-drawable:27.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
     implementation 'com.android.volley:volley:1.1.0'
-    implementation 'com.google.android.gms:play-services-auth:15.0.1'
+    implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.12'
     implementation 'pub.devrel:easypermissions:0.3.0'
     implementation('com.google.api-client:google-api-client-android:1.23.0') {
         exclude group: 'org.apache.httpcomponents'
