--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="hr.lda_verteneglio.ldainpocket">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -14,27 +13,36 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".NewsActivityOnCreate"
+            android:name=".SplashScreenActivity"
             android:label="@string/app_name"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ActivitiesActivityOnCreate"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop">
-        </activity>
-        <activity android:name=".GoAbroadActivityOnCreate"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop">
-        </activity>
-        <activity android:name=".MoreActivityOnCreate"
-            android:screenOrientation="portrait"
-            android:launchMode="singleTop">
-        </activity>
+        <activity
+            android:name=".NewsActivityOnCreate"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".ActivitiesActivityOnCreate"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".PartnerDetailActivity"
+            android:parentActivityName=".ActivitiesActivityOnCreate"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".GoAbroadActivityOnCreate"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name=".MoreActivityOnCreate"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
