--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,24 +25,28 @@
         </activity>
         <activity
             android:name=".NewsActivityOnCreate"
+            android:label="@string/title_news"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ActivitiesActivityOnCreate"
+            android:label="@string/title_activities"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".PartnerDetailActivity"
             android:parentActivityName=".ActivitiesActivityOnCreate"
             android:screenOrientation="portrait" />
         <activity
             android:name=".GoAbroadActivityOnCreate"
+            android:label="@string/title_go_abroad"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".MoreActivityOnCreate"
+            android:label="@string/title_more"
             android:launchMode="singleTop"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
