--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /captures
 .externalNativeBuild
 /app/src/main/java/hr/lda_verteneglio/ldainpocket/Config.java
+app/src/main/java/hr/lda_verteneglio/ldainpocket/Config.java
